build_output2.txt

> Configure project :
Fabric Loom: 1.8.13

> Task :compileJava FAILED
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: illegal start of type
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
    ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: ';' expected
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
        ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: <identifier> expected
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
            ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: illegal start of type
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
                 ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: ';' expected
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
                     ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: invalid method declaration; return type required
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
                      ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1166: error: <identifier> expected
    this.mob=mob;this.setControls(EnumSet.of(Control.MOVE,Control.LOOK));
                                            ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1171: error: class, interface, enum, or record expected
        public boolean canStart() {
               ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1173: error: class, interface, enum, or record expected
        }
        ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1176: error: class, interface, enum, or record expected
        public void start() {
               ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1178: error: class, interface, enum, or record expected
        }
        ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1181: error: class, interface, enum, or record expected
        public boolean shouldContinue() {
               ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1183: error: class, interface, enum, or record expected
        }
        ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1186: error: class, interface, enum, or record expected
        public void tick() {
               ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1189: error: class, interface, enum, or record expected
            }
            ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1191: error: class, interface, enum, or record expected
        }
        ^
C:\JavaProjects\welcome-to-my-world-1.20.1\src\main\java\com\trongthang\welcometomyworld\entities\Blossom.java:1421: error: class, interface, enum, or record expected
}
^
17 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 9s
1 actionable task: 1 executed
